--- a/src/Articulate/Articulate.csproj
+++ b/src/Articulate/Articulate.csproj
@@ -109,8 +109,10 @@
   <!-- Nuget Package Dependencies -->
   <ItemGroup>
     <PackageReference Include="Argotic.Core" Version="3001.0.0" />
+    <PackageReference Include="Lucene.Net.Replicator" Version="4.8.0-beta00017" />
     <PackageReference Include="Smidge" Version="4.5.1" />
     <PackageReference Include="System.ServiceModel.Syndication" Version="9.0.5" />
+    <PackageReference Include="System.Text.Json" Version="8.0.5" />
     <PackageReference Include="WilderMinds.MetaWeblog" Version="5.1.3" />
   </ItemGroup>
   
